Fix event info wrapping under start date

--- a/static/css/another.css
+++ b/static/css/another.css
@@ -213,6 +213,14 @@ section.admin nav {
     align-items: center;
 }
 
+ul.by-venue li {
+    display: flex;
+}
+
+ul.by-venue li div:first-child {
+    flex-shrink: 0;
+}
+
 .admin ul li {
     display: grid;
     grid-template-columns: 1fr auto;
